--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "gatsby-plugin-htaccess": "^1.1.1",
     "gatsby-remark-copy-linked-files": "^2.1.3",
     "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-remark-smartypants": "^2.1.2",
