--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "gatsby-plugin-htaccess": "^1.1.1",
+    "gatsby-plugin-html-minifier": "^2.0.0",
     "gatsby-remark-copy-linked-files": "^2.1.3",
     "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-remark-smartypants": "^2.1.2",
     "gatsby-transformer-remark": "^2.6.8",
     "gh-pages": "^2.0.1",
+    "html-minifier": "^4.0.0",
     "prismjs": "^1.17.1"
   }
 }
