--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gatsby-plugin-htaccess": "^1.1.1",
     "gatsby-plugin-html-minifier": "^2.0.0",
     "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-sitemap": "^2.2.3",
     "gatsby-remark-copy-linked-files": "^2.1.3",
     "gatsby-remark-prismjs": "^3.3.3",
     "gatsby-remark-smartypants": "^2.1.2",
