--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
+    "gatsby-plugin-catch-links": "^2.1.2",
     "gatsby-plugin-htaccess": "^1.1.1",
     "gatsby-plugin-html-minifier": "^2.0.0",
     "gatsby-plugin-offline": "^2.2.4",
