--- a/src/data/faq.yaml
+++ b/src/data/faq.yaml
@@ -8,16 +8,15 @@
 
 -
   q: Why LiveISO mines to Developer wallets on start?
-  a: We assume that LiveISO version is for TESTING only, thus it must have a proper wallet address for miner to use. Please use the Image installation for production server.
+  a: The automine is for testing the operating system.
 
 -
   q: Supported Graphic Cards
-  a: "We can only test using graphic cards that we have at our testing machine: RX580, RXVega56, GTX750TI, GTX1060-3GB, GTX1070 and GTX1070TI."
+  a: "It is tested against : RX580-8GB, GTX750TI, GTX1060-3GB, GTX1070 and GTX1070TI."
 
 -
-  q: Is mixing AMD and Nvidia cards in a single box works?
-  a: The OS has the capability to run both cards but our testing box is not configured for mixed mode so your milage may vary when running on mixed card mode
-
+  q: Is mixing AMD and Nvidia GPU in a single box possible?
+  a: It is possible, but it is untested feature so your milage may vary.
 -
   q: Is running both CPU and GPU miner possible?
   a: Yes, it is possible.
@@ -28,11 +27,11 @@
 
 -
   q: Do you use static ip for the miner box?
-  a: By default it will use DHCP to detect the miner box IP address, but it is recommended to use static ip address instead for faster booting process.
+  a: By default it will use DHCP to detect the miner box IP address, but it is recommended to change it to static ip address for faster booting process.
 
 -
   q: Is this open source?
-  a: Yes, all the build scripts and other supporting software is open sourced as much as possible.
+  a: Yes, it is open sourced whenever possible.
 
 -
   q: What miners does this os support?
