--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
-    "react-jss": "^8.6.1"
+    "react-jss": "^8.6.1",
+    "sharp": "^0.23.0"
   },
   "devDependencies": {
     "all-contributors-cli": "^6.4.0",
