--- a/src/data/download.yaml
+++ b/src/data/download.yaml
@@ -1,15 +1,15 @@
 -
   title: LiveISO
-  url: "http://www.mediafire.com/file/mz72urg96g19de7/jxos-2019-livecd-RC5.iso/file"
+  url: "http://www.mediafire.com/file/omk3smeceufse8z/jxos-2019-livecd-RC6.iso/file"
   description: LiveISO version for JXOS, suitable for testing the OS using USB stick
-  version: jxos-2019-livecd-RC5
+  version: jxos-2019-livecd-RC6
   project: "https://github.com/duckzland/jxos-livecd"
 
 -
   title: Compressed Image
-  url: "http://www.mediafire.com/file/60xjed9cxpbkj19/jxos-2019-install-image.img.xz/file"
+  url: "http://www.mediafire.com/file/i0z2w1oxqdfxdhb/jxos-2019-image-RC6.img.xz/file"
   description: "Compressed image file for burning into SSD or normal hard drive, suitable for production server"
-  version: jxos-2019-install-image
+  version: jxos-2019-install-image-RC6
   project: "https://github.com/duckzland/jxos-image"
 
 -
@@ -28,9 +28,9 @@
 
 -
   title: "JXDashboard"
-  url: "https://github.com/duckzland/jxos-livecd/raw/master/data/deb/packages/jxdashboard_1.0.5_amd64.deb"
+  url: "https://github.com/duckzland/jxos-repo/raw/master/jxdashboard_2.0.1_amd64.deb"
   description: "Electron App for managing JXMiner via GUI"
-  version: "1.0.5"
+  version: "2.0.1"
   project: "https://github.com/duckzland/jxdashboard"
 
 -
