--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "lint": "eslint ./src",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "develop": "gatsby develop --host 192.168.0.108 --port 14000",
+    "develop": "gatsby develop --host 192.168.0.115 --port 14000",
     "build": "gatsby build",
-    "server": "NODE_ENV=production PORT=14000 HOST=127.0.0.1 node server.js"
+    "server": "NODE_ENV=production PORT=14000 HOST=127.0.0.1 node server.js",
+    "production": "NODE_ENV=production gatsby build"
   },
   "dependencies": {
     "@helcor/window-sizes": "^1.0.0-beta.8",
